# arduino-unit-testing-sample-project

./: CMakeLists.txt  CMakeLists.txt.not.working  CMakeLists.txt.working.backup  GetListOfSubDirectories.cmake  main.cpp  utilities.cmake
application/BaseClass/: BaseClass.cpp  BaseClass.h
arduino-cmake/: CMakeLists.txt
arduino-cmake/cmake/Platform/: Arduino.cmake
arduino-cmake/example/: CMakeLists.txt  blink.cpp  blink_lib.cpp  blink_lib.h
ut/mocks/SampleMock2/: SampleMock2.h
ut/tests/: TestSimple.cpp
ut/tests/Test1/: TestSimple2.cpp
